# archives_scraper

./: .gitignore  README.md  README_WORKER.md  cli.py  main.py  main_old.py  pyproject.toml  worker.py
db/: db.py  models.py
developement/: archives_db_schema_20260107_162352.json  archives_db_schema_20260107_162352.txt
text_extraction/: basic_extraction.py  extraction_utils.py  image_extraction.py  image_extraction_worker.py  pdf_extraction.py  pdf_extraction_worker.py  web_extraction.py
